Remove Head Pointers while rebasing to master. Also moved the check VMRunning code position for optimization